--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Averyanov_Oleg</title>
     <link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Vollkorn&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js"></script>
+    <link rel="stylesheet" href="css/style_v2.css">
+    <script src="js/script_v2.js"></script>
 </head>
 <body>
     <div class="wrap">
