--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="wrap2_projects">
                 <div class="mob_menu"><p class="black_text">MENU</p></div>
                 <p class="projects_zagl">Раздел в разработке</p>
-                <a href=""></a>
+                <a href="Web_test/index.html"></a>
             </div>
         </div>
 
