--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
                                 <tr><td></td><td class="td_text">ECMAScript6</td></tr>
                                 <tr><td></td><td class="td_text">DOM</td></tr>
                                 <tr><td></td><td class="td_text">Vue.js</td></tr>
+                                <tr><td></td><td class="td_text">React.js</td></tr>
                                 <tr><td></td><td class="td_text">jQuery</td></tr>
                             </table>
                         </div>
